--- a/workspaces/Describing_Simulation_0/project/tsconfig.json
+++ b/workspaces/Describing_Simulation_0/project/tsconfig.json
@@ -7,7 +7,7 @@
     "paths": {
       "src/*": ["src/*"]
     },
-    "rootDir": "src",
+    "rootDir": ".",
     "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
@@ -18,6 +18,6 @@
     "skipLibCheck": true,
     "types": ["jest", "node"]
   },
-  "include": ["src", "tests"],
+  "include": ["src", "tests", "plugins"],
   "exclude": ["dist", "node_modules"]
 }
