--- a/workspaces/Describing_Simulation_0/project/package.json
+++ b/workspaces/Describing_Simulation_0/project/package.json
@@ -9,9 +9,11 @@
   },
   "type": "commonjs",
   "devDependencies": {
+    "@types/node": "^22.10.2",
     "@types/jest": "^30.0.0",
     "jest": "^30.1.3",
     "ts-jest": "^29.4.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
 }
