--- a/workspaces/Describing_Simulation_0/project/package.json
+++ b/workspaces/Describing_Simulation_0/project/package.json
@@ -5,13 +5,15 @@
   "description": "Core ECS primitives for the Describing Simulation 0 workspace.",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "test": "jest --runInBand"
+    "test": "jest --runInBand",
+    "integration": "ts-node tests/integration/server.integration.ts"
   },
   "type": "commonjs",
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "jest": "^30.1.3",
     "ts-jest": "^29.4.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
 }
