--- a/workspaces/Describing_Simulation_0/package.json
+++ b/workspaces/Describing_Simulation_0/package.json
@@ -5,9 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "vitest run",
-    "start": "node --loader ts-node/esm src/main.ts",
-    "build": "tsc -p tsconfig.json",
-    "start:prod": "node dist/main.js"
+    "start": "node --loader ts-node/esm src/main.ts"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
