--- a/workspaces/Describing_Simulation_0/package.json
+++ b/workspaces/Describing_Simulation_0/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "test": "vitest run",
-    "start": "node --loader ts-node/esm --experimental-specifier-resolution=node src/main.ts"
+    "start": "node --loader ts-node/esm --experimental-specifier-resolution=node src/main.ts",
+    "build": "tsc -p tsconfig.json",
+    "start:prod": "node dist/main.js"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
