--- a/workspaces/Describing_Simulation_0/package.json
+++ b/workspaces/Describing_Simulation_0/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "vitest run",
     "start": "node --loader ts-node/esm --experimental-specifier-resolution=node src/main.ts",
-    "build": "tsc -p tsconfig.json",
+    "build": "tsc -p tsconfig.build.json",
     "start:prod": "node dist/main.js"
   },
   "devDependencies": {
