--- a/workspaces/Describing_Simulation_0/package.json
+++ b/workspaces/Describing_Simulation_0/package.json
@@ -7,7 +7,8 @@
     "test": "vitest run",
     "start": "node --loader ts-node/esm --experimental-specifier-resolution=node src/main.ts",
     "build": "tsc -p tsconfig.build.json",
-    "start:prod": "node dist/main.js"
+    "start:prod": "node dist/main.js",
+    "simulate:thermostat": "node --loader ts-node/esm --experimental-specifier-resolution=node src/scripts/runThermostatSimulation.ts"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
