ecs: extract package and keep core compatibility shims

--- a/workspaces/Describing_Simulation_0/package.json
+++ b/workspaces/Describing_Simulation_0/package.json
@@ -10,6 +10,9 @@
     "test": "jest",
     "test:watch": "jest --watchAll"
   },
+  "dependencies": {
+    "@simeval/ecs": "file:../../packages/ecs"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
