--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 node_modules/
 workspaces/**/node_modules/
 workspaces/**/dist/
+packages/**/node_modules/
+packages/**/dist/
 workspaces/**/verifications/
 verifications/
 .DS_Store
