ecs: rename to @georgeluo/ecs and update docs

--- a/packages/ecs/package.json
+++ b/packages/ecs/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@simeval/ecs",
-  "version": "0.1.0",
+  "name": "@georgeluo/ecs",
+  "version": "0.1.1",
   "description": "Reusable ECS engine and simulation players for SimEval.",
   "keywords": [
     "ecs",
