--- a/workspaces/Describing_Simulation_0/package.json
+++ b/workspaces/Describing_Simulation_0/package.json
@@ -11,7 +11,7 @@
     "test:watch": "jest --watchAll"
   },
   "dependencies": {
-    "@simeval/ecs": "file:../../packages/ecs"
+    "@georgeluo/ecs": "file:../../packages/ecs"
   },
   "keywords": [],
   "author": "",
